# self_made_Compiler

./: CMakeLists.txt  main.c
headers/: input_symbol.h  states_and_tokens.h  transition_table.h
headers/LRparser/: ACTIONtable.h  GOTOtable.h  parser.h  stack.h
headers/PDparser/: parsing_table.h  pdparser.h  production_rule.h  stack.h
headers/lex/: input_symbol.h  lex.h  transition_table.h
src/: input_symbol.c  lex.c  states_and_tokens.c  transition_table.c
src/LRparser/: action_table.c  goto_table.c  parser.c  stack.c
src/PDparser/: parsing_table.c  pdparser.c  stack.c
src/lex/: input_symbol.c  lex.c  states_and_tokens.c  transition_table.c
